# metadata-reboot

./: .gitignore  config.json  config.yaml  pyproject.toml  readme.md  requirements.txt
src/: main.py
src/meta_data_reboot/: main.py
